# ski

./: .gitignore  AUTHORS  BUGS  ChangeLog  ChangeLog.2007  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README-maint.md  README-networking.md  TODO  XSki  XSki.freebsd  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool  ski-config  ski-config.in  ski.spec  ski.spec.in
.github/workflows/: ci-autotools.yml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
debian/: README.Debian  changelog  control  copyright  dirs  docs  rules
doc/: Makefile  Makefile.am  Makefile.in  perf-changes.txt  ski-manual-v1.0.pdf.uu  ski-notes.html  ski.1  ski.man
doc/manual/: SkiManualMasterDoc.odm  debuggin.odt  indirect.odt  int_syms.odt  intro.odt  language.odt  license.odt  manipula.odt  menu.odt  messages.odt  os.odt  register.odt  screens.odt  simulate.odt  starting.odt  title.odt
libltdl/: Makefile  Makefile.in  config.h  config.status  configure  libtool
libltdl/autom4te.cache/: output.1  requests  traces.0  traces.1
macros/: Makefile  Makefile.am  Makefile.in  aclocal-include.m4  autogen.sh  compilers.m4  debian.m4  ltdl.m4  motif.m4  sed.m4
misc/: bskinc  ia64fmt
ski-bootloader/: Makefile  README.md  boot_head.S  bootloader.c  bootloader.h  fw-emu.c  fw-emu.h  memstr.c  memstr.h  ssc.h
ski-bootloader/include/: efi.h  elf.h
ski-bootloader/include/ia64/: pal.h  sal.h  setup.h
ski-efi/: Makefile  README.md  boot_head.S  bootloader.c  bootloader.h  fw-emu.c  fw-emu.h  memstr.c  ssc.h
ski-efi/include/: efi.h  types.h
src/: Copyright  Makefile  Makefile.am  Makefile.in  XSki  asm.awk  asm.c  asm.h  asm_hash.c  batch.c  batch.h  bits.h  combfns.awk  combfns.c  combfns.h  coreui.h  cur.c  cur.h  das.awk  das_instr.c  das_instr.h  data.c  data.h  dos.c  dos.h  eparse.c  eparse.h  eparse.y  escan.c  escan.l  exec.c  exec.h  exec.incl.c  exec.tmpl.c  execTbl  exec_hd.c  exportui.h  fields.h  firmware.c  firmware.h  (+124 more)
src/decoder/: Makefile  Makefile.am  Makefile.in  _decoder.h  decode_tree.c  decoder.c  decoder.h  instID.awk  instID.h  operands.awk  operands.h  operands.h_template  parts.c
src/encoder/: EMInst.h  EMformats.h  Makefile  Makefile.am  Makefile.in  encode_table.c  encoder.c  encoder.h  formats.awk  formats.c  formats.c_template
src/encodings/: encoding.decode  encoding.encode  encoding.format  encoding.imm  encoding.opcode  encoding.unusedop
src/fake-xterm/: Makefile  Makefile.am  Makefile.in  ski-fake-xterm.c
src/freebsd/: convert.c  dwarf.c  firmware.c  machdep.h  misc.c  osload.c  signal.c  signal.h  ssc.c  syscall.c  syscall.h
src/hpux/: dwarf-hpux.c  osload-hpux.c  syscall-hpux.c  syscall-hpux.h
src/linux/: dwarf-linux.c  osload-linux.c  syscall-linux.c  syscall-linux.h  syscall-print.c  syscall-print.h
testsuite/: Makefile  bski-help.qmt  bski-help2.qmt  expectations.qmr  hello  hello.c  hello.qmt  results.qmr  site.exp  ski-help.qmt  ski-help2.qmt  xski-help.qmt  xski-help2.qmt
testsuite/QMTest/: configuration
